added some html links

--- a/introduction.html
+++ b/introduction.html
@@ -18,7 +18,18 @@
         <h1 id="TITLE">Chicuela World Introduction</h1>
 </div>
 
+
 <div id="BODY">
+    <div id="index">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="introduction.html">Introduction</a></li>
+            <li><a href="what.html">What are chicuelas?</a></li>
+            <li><a href="races.html">Chicuela races</a></li>
+        </ul>
+    </div>
+            
+
     <div id="CenterDiv">
         <h2 id="titlecenter">What's the idea behind this lore?</h2>
         <p>Around 2014 I had the idea of making a harem manga, but done in a way that didn't feel like a collection of cliches of other animes.</p>
