--- a/races.html
+++ b/races.html
@@ -19,6 +19,15 @@
 
 
 <div id="BODY">
+    <div id="index">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="introduction.html">Introduction</a></li>
+            <li><a href="what.html">What are chicuelas?</a></li>
+            <li><a href="races.html">Chicuela races</a></li>
+        </ul>
+    </div>
+    
     <div id="CenterDiv">
         <h2 id="titlecenter">List of races in this world</h2>
         <p>Here's a chart that is mostly a guide to understand each race.</p>
