--- a/what.html
+++ b/what.html
@@ -19,6 +19,15 @@
 </div>
 
 <div id="BODY">
+    <div id="index">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="introduction.html">Introduction</a></li>
+            <li><a href="what.html">What are chicuelas?</a></li>
+            <li><a href="races.html">Chicuela races</a></li>
+        </ul>
+    </div>
+        
     <div id="CenterDiv">
     <p>What are chicuelas?</p>
     <p>As with anything, it requires a bit of explanation.</p>
