fixed what page title bug

--- a/what.html
+++ b/what.html
@@ -29,7 +29,7 @@
     </div>
         
     <div id="CenterDiv">
-    <p>What are chicuelas?</p>
+    <h2 id="titlecenter">What are chicuelas?</h2>
     <p>As with anything, it requires a bit of explanation.</p>
     <p>Their name is a portmanteu of ball girls in spanish and latin, which eventually evolved into a very similar word to Chicuela, which ironically is a mexican slang for girls.</p>
     <p>But beyond that, chicuelas are the females of this world, they initially are thought of fantasy anime girls.</p>
